--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wxt-react-starter",
   "version": "0.0.0",
   "private": true,
-  "description": "manifest.json description",
+  "description": "A browser extension for bidirectional Chinese-English translation via context menus.",
   "type": "module",
   "scripts": {
     "dev": "wxt",
@@ -27,8 +27,8 @@
     "@types/react-dom": "^19.2.3",
     "@wxt-dev/module-react": "^1.1.5",
     "daisyui": "^5.5.14",
-    "oxfmt": "^0.23.0",
-    "oxlint": "^1.38.0",
+    "oxfmt": "^0.24.0",
+    "oxlint": "^1.39.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
