--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
-    "lint": "oxlint . --fix",
-    "format": "oxfmt .",
+    "lint": "oxlint . --fix && oxfmt .",
     "postinstall": "wxt prepare"
   },
   "dependencies": {
