--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "translate-extension",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "description": "A browser extension for bidirectional Chinese-English translation via context menus.",
   "type": "module",
@@ -12,8 +12,7 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
-    "lint": "oxlint . --fix",
-    "format": "oxfmt .",
+    "lint": "oxlint . --fix && oxfmt .",
     "postinstall": "wxt prepare"
   },
   "dependencies": {
